# Projects

./: .gitignore  README.md
.github/workflows/: pwtool-ci.yml
Academic Projects/Group/Password Generator/: README.md
Academic Projects/Individual/flask_project/: app.py  models.py  pyproject.toml
Database Management/One Piece - Game Databse/Mongo/: Islands.json  items.json  mongo-queries.js  players.json  villains.json
Database Management/One Piece - Game Databse/SQL/: onepiece.db  sql-queries.sql.sql
Personal Projects/Enterprise Network Infrastructure Simulation/: README.md
Personal Projects/task_tracker/: README.md  requirements.txt
Personal Projects/task_tracker/frontend/: jest.config.js  package-lock.json  package.json
Personal Projects/task_tracker/tests/: test_tasks.py
StudySync - Personal/: README.md
UI & UX/: README.md
flask_project - Academic/: README.md  app.py  db.py  manage.py  manupulation.py  store_p2.db
flask_project - Academic/templates/: base.html  category_detail.html  customer_detail.html  error.html  home.html  orders.html  products.html
task_tracker - Personal/: .gitignore  README.md  pyproject.toml
task_tracker - Personal/backend/app/: __init__.py  config.py  models.py
task_tracker - Personal/backend/app/routes/: tasks.py
task_tracker - Personal/frontend/: package-lock.json
task_tracker - Personal/frontend/src/components/: TaskCard.js
task_tracker - Personal/frontend/src/styles/: global.css
task_tracker - Personal/frontend/src/tests/: AddTask.test.js  useTasks.test.js
(+15 files in other folders)
